--- a/Q1/q1.ipynb
+++ b/Q1/q1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "3cf02808",
    "metadata": {},
    "outputs": [
@@ -15,6 +15,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "seoul\n",
+      "-1.4 ,-1.0 ,0.0 ,1.0 ,1.1 ,0.9 ,1.4 ,0.4 ,1.4 ,0.6 ,0.4 ,-1.4 ,\n",
+      "dajeon\n",
+      "0.0 ,0.2 ,0.6 ,1.1 ,1.4 ,1.7 ,1.1 ,0.4 ,0.8 ,0.3 ,-0.1 ,-0.6 ,\n",
+      "busan\n",
+      "4.8 ,3.7 ,2.8 ,1.1 ,1.0 ,-0.7 ,0.3 ,1.1 ,1.9 ,3.6 ,4.8 ,4.7 ,\n",
+      "jeju\n",
+      "7.1 ,5.5 ,3.8 ,1.6 ,0.9 ,0.3 ,1.4 ,2.8 ,3.0 ,4.3 ,5.9 ,8.2 ,"
+     ]
     }
    ],
    "source": [
@@ -49,6 +63,15 @@
     "    result4 = []\n",
     "    result5 = []\n",
     "    \n",
+    "    seoul = []\n",
+    "    dajeon = []\n",
+    "    busan = []\n",
+    "    jeju = []\n",
+    "    cnt1 = 0\n",
+    "    cnt2 = 0\n",
+    "    cnt3 = 0\n",
+    "    cnt4 = 0\n",
+    "    \n",
     "    for row in data1:\n",
     "        if row[2] != '':\n",
     "            result1.append(float(row[2]))\n",
@@ -56,18 +79,26 @@
     "    for row in data2:\n",
     "        if row[2] != '':\n",
     "            result2.append(float(row[2]))\n",
+    "            seoul.append(float(row[2]) - result1[cnt1])\n",
+    "            cnt1+=1\n",
     "            \n",
     "    for row in data3:\n",
     "        if row[2] != '':\n",
     "            result3.append(float(row[2]))\n",
+    "            dajeon.append(float(row[2]) - result1[cnt2])\n",
+    "            cnt2+=1\n",
     "            \n",
     "    for row in data4:\n",
     "        if row[2] != '':\n",
     "            result4.append(float(row[2]))\n",
+    "            busan.append(float(row[2]) - result1[cnt3])\n",
+    "            cnt3+=1\n",
     "            \n",
     "    for row in data5:\n",
     "        if row[2] != '':\n",
     "            result5.append(float(row[2]))\n",
+    "            jeju.append(float(row[2]) - result1[cnt4])\n",
+    "            cnt4+=1\n",
     "    \n",
     "    \n",
     "    \n",
@@ -85,6 +116,18 @@
     "    plt.legend()\n",
     "    plt.show()\n",
     "\n",
+    "    print(\"seoul\")\n",
+    "    for i in range(12):\n",
+    "        print(\"%.1f ,\" % seoul[i], end='')\n",
+    "    print(\"\\ndajeon\")\n",
+    "    for i in range(12):\n",
+    "        print(\"%.1f ,\" % dajeon[i], end='')\n",
+    "    print(\"\\nbusan\")\n",
+    "    for i in range(12):\n",
+    "        print(\"%.1f ,\" % busan[i], end='')\n",
+    "    print(\"\\njeju\")\n",
+    "    for i in range(12):\n",
+    "        print(\"%.1f ,\" % jeju[i], end='')\n",
     "\n",
     "    f1.close()\n",
     "    f2.close()\n",
